--- a/app/global.css
+++ b/app/global.css
@@ -8,3 +8,60 @@
   background-color: #ffffff !important;
   background: #ffffff;
 }
+
+@layer base {
+  :root {
+    --background: 250 30% 98%;
+    --foreground: 240 10% 3.9%;
+    /* --background: 0 0% 100%; */
+    /* --foreground: 240 10% 3.9%; */
+    /* --primary: 240 5.9% 10%; */
+    /* --primary-foreground: 0 0% 98%; */
+    /* --radius: 0.5rem; */
+
+    --card: 0 0% 100%;
+    --card-foreground: 240 10% 3.9%;
+
+    --popover: 0 0% 100%;
+    --popover-foreground: 240 10% 3.9%;
+
+    --primary: 265 83.6% 57.8%;
+    --primary-foreground: 0 0% 98%;
+
+    --secondary: 240 4.8% 95.9%;
+    --secondary-foreground: 240 5.9% 10%;
+
+    --muted: 240 4.8% 95.9%;
+    --muted-foreground: 240 3.8% 46.1%;
+
+    --accent: 265 73.6% 93.8%;
+    --accent-foreground: 265 83.6% 20%;
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+
+    --border: 240 5.9% 90%;
+    --input: 240 5.9% 90%;
+    --ring: 265 83.6% 57.8%;
+
+    --radius: 0.75rem;
+  }
+}
+@layer base {
+  * {
+    @apply border-border;
+  }
+
+  body {
+    @apply bg-background text-foreground;
+    -webkit-tap-highlight-color: transparent;
+    font-feature-settings:
+      "rlig" 1,
+      "calt" 1;
+    touch-action: manipulation;
+    overscroll-behavior-y: none;
+    -webkit-overflow-scrolling: touch;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  }
+}
